fixed the layout issue and the nav bar. I hope it work fine

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
   body {
     margin: 0px;
-    font-family: 'Fraunces', serif;
+   
   }
   
   .nav {
@@ -190,7 +190,7 @@
           </label>
       </div>
 
-      <div class="nav-links">
+      <div class="nav-links font-['Fraunces']">
           <ul>
       <li class="text-gray-900 md:text-white"><a href="#" target="_blank">About</a></li>
       <li class="text-gray-900 md:text-white"><a href="#" target="_blank">Services</a></li>
@@ -302,9 +302,9 @@
       </div>
       <div class="pb-24">
         <ul class="flex justify-around">
-        <li class="text-green-800 font-['Fraunces'] text-sm md:text-md">About</li>
-        <li class="text-green-800 font-['Fraunces'] text-sm md:text-md">Services</li>
-        <li class="text-green-800 font-['Fraunces'] text-sm md:text-md"> Projects</li>
+        <li class="text-green-800 font-['Fraunces'] text-{7px} md:text-md">About</li>
+        <li class="text-green-800 font-['Fraunces'] text-{7px} md:text-md">Services</li>
+        <li class="text-green-800 font-['Fraunces'] text-{7px} md:text-md"> Projects</li>
        
         </ul>
       </div>
