fixed the nav-bar

--- a/public/index.html
+++ b/public/index.html
@@ -301,7 +301,7 @@
 
       </div>
       <div class="pb-24">
-        <ul class="flex justify-around">
+        <ul class="flex justify-around gap-3">
         <li class="text-green-800 font-['Fraunces'] text-{7px} md:text-md">About</li>
         <li class="text-green-800 font-['Fraunces'] text-{7px} md:text-md">Services</li>
         <li class="text-green-800 font-['Fraunces'] text-{7px} md:text-md"> Projects</li>
